--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="col-6">
                   <h1 class="titulo1">Quien somos</h1>
                   <p class="primerp">ofrecemos cursos de programacion , marketing digital y siplomados en mercado libre </p>
-                  <p class="segundop">todo certificado </p>
+                  <p class="segundop">todo certificado completamente </p>
                 </div>
                 <div class="col-6">
                  <img class="portada" src="./ime/portada.jpg" alt="">
