se agregaron las imagenes primarias

--- a/contacto.html
+++ b/contacto.html
@@ -45,9 +45,8 @@
     
     <div class="mi-recuadro text-center">
       <h1 class="titulo-contacto">Contactanos</h1>
-      <a  href="https://api.whatsapp.com/send?
-    phone=3132933441" class="whatsapp">
-Hablemos por whatsapp..</a>
+      <a  href="https://wa.me/3132933441/?text=estoy%20interezado" class="whatsapp">
+  Hablemos por whatsapp..</a>
     </div>
 </body>
 </html>
